--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<html>
+
 <head>
     <style>
         :root {
@@ -7,8 +9,15 @@
             font-size: 14px;
         }
 
-        h1 {
+        h1, h2 {
             font-weight: 700;
+        }
+
+        h1 {
+            font-size: 20px;
+        }
+
+        h2 {
             font-size: 18px;
         }
 
@@ -30,7 +39,7 @@
     </style>
 </head>
 
-<body class="c10">
+<body>
     <main>
         <section>
             <h1>Privacy Policy</h1>
@@ -47,17 +56,17 @@
                 improving the Service. We will not use or share your information with anyone except as described in this
                 Privacy Policy.
 
-                The terms used in this Privacy Policy have the same meanings as in our Terms and
+                The terms used in this Privacy Policy have the same meanings as in our <a href="/terms"></a>Terms and
                 Conditions, which is accessible at Brain Exercise unless otherwise defined in this Privacy Policy.
             </p>
-            <h1>Information Collection and Use</h1>
+            <h2>Information Collection and Use</h2>
             <p>
                 For a better experience, while using our Service, we may require you to provide us
                 with certain personally identifiable information. The information that we request will be retained by us
                 and
                 used as described in this privacy policy.
             </p>
-            <h1>Log Data</h1>
+            <h2>Log Data</h2>
             <p>
                 We want to inform you that whenever you use our Service, in a case of an error in the
                 app we collect data and information (through third party products) on your phone called Log Data. This
@@ -68,7 +77,7 @@
                 your
                 use of the Service, and other statistics.
             </p>
-            <h1>Cookies</h1>
+            <h2>Cookies</h2>
             <p>
                 Cookies are files with a small amount of data that are commonly used as anonymous
                 unique identifiers. These are sent to your browser from the websites that you visit and are stored on
@@ -83,7 +92,7 @@
                 this
                 Service.
             </p>
-            <h1>Service Providers</h1>
+            <h2>Service Providers</h2>
             <p>We may employ third-party companies and individuals due to the following reasons:</p>
             <ul>
                 <li>To facilitate our Service;</li>
@@ -96,7 +105,7 @@
                 are
                 obligated not to disclose or use the information for any other purpose.
             </p>
-            <h1>Security</h1>
+            <h2>Security</h2>
             <p>
                 We value your trust in providing us your Personal Information, thus we are striving
                 to use commercially acceptable means of protecting it. But remember that no method of transmission over
@@ -105,7 +114,7 @@
                 absolute
                 security.
             </p>
-            <h1>Links to Other Sites</h1>
+            <h2>Links to Other Sites</h2>
             <p>
                 This Service may contain links to other sites. If you click on a third-party link,
                 you will be directed to that site. Note that these external sites are not operated by us. Therefore, we
@@ -113,7 +122,7 @@
                 no
                 responsibility for the content, privacy policies, or practices of any third-party sites or services.
             </p>
-            <h1>Children&rsquo;s Privacy</h1>
+            <h2>Children&rsquo;s Privacy</h2>
             <p>
                 These Services do not address anyone under the age of 13. We do not knowingly collect
                 personally identifiable information from children under 13. In the case we discover that a child under
@@ -124,7 +133,7 @@
                 us
                 so that we will be able to do necessary actions.
             </p>
-            <h1>Changes to This Privacy Policy</h1>
+            <h2>Changes to This Privacy Policy</h2>
             <p>
                 We may update our Privacy Policy from time to time. Thus, you are advised to review
                 this page periodically for any changes. We will notify you of any changes by posting the new Privacy
@@ -132,7 +141,7 @@
                 on this page.
             </p>
             <p>This policy is effective as of 2020-09-19.</p>
-            <h1>Contact Us</h1>
+            <h2>Contact Us</h2>
             <p>
                 If you have any questions or suggestions about our Privacy Policy, do not hesitate to
                 contact us at brainexerciseinitiative@gmail.com.
@@ -140,3 +149,5 @@
         </section>
     </main>
 </body>
+
+</html>
