fix: properly link to Terms & Conditions

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -56,7 +56,7 @@
                 improving the Service. We will not use or share your information with anyone except as described in this
                 Privacy Policy.
 
-                The terms used in this Privacy Policy have the same meanings as in our <a href="/terms">Terms & Conditions</a>
+                The terms used in this Privacy Policy have the same meanings as in our <a href="../terms">Terms & Conditions</a>
                 which is accessible at Brain Exercise unless otherwise defined in this Privacy Policy.
             </p>
             <h2>Information Collection and Use</h2>
